--- a/src/css1.css
+++ b/src/css1.css
@@ -1,54 +1,28 @@
-#Iframe-Master-CC-and-Rs {
-  max-width: 512px;
-  max-height: 100%; 
-  overflow: hidden;
-}
-
-/* inner wrapper: make responsive */
-.responsive-wrapper {
-  position: relative;
-  height: 0;    /* gets height from padding-bottom */
-  
-  /* put following styles (necessary for overflow and scrolling handling on mobile devices) inline in .responsive-wrapper around iframe because not stable in CSS:
-    -webkit-overflow-scrolling: touch; overflow: auto; */
-  
-}
- 
-.responsive-wrapper iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
+html {
   height: 100%;
-  
+}
+body {
+  height: 100%;
   margin: 0;
-  padding: 0;
-  border: none;
 }
 
-/* padding-bottom = h/w as % -- sets aspect ratio */
-/* YouTube video aspect ratio */
-.responsive-wrapper-wxh-572x612 {
-  padding-bottom: 107%;
+.carrete {
+  margin: auto;
+  background: white;
+  box-shadow: rgba(0, 0, 0, 0.5) 0px 22px 70px 4 px;
+  border-radius: 8px;
+  width: fit-content;
 }
 
-/* general styles */
-/* ============== */
-.set-border {
-  border: 5px inset #4f4f4f;
+.contenedor_imagenes {
+  display: flex;
+  gap: 10px;
+  overflow-x: auto;
+  scroll-snap-type: x proximity;
 }
-.set-box-shadow { 
-  -webkit-box-shadow: 4px 4px 14px #4f4f4f;
-  -moz-box-shadow: 4px 4px 14px #4f4f4f;
-  box-shadow: 4px 4px 14px #4f4f4f;
-}
-.set-padding {
-  padding: 40px;
-}
-.set-margin {
-  margin: 30px;
-}
-.center-block-horiz {
-  margin-left: auto !important;
-  margin-right: auto !important;
+
+.contenedor_imagenes img {
+    scroll-snap-align: start;
+  height: fit-content;
+  width: auto;
 }
