--- a/src/css1.css
+++ b/src/css1.css
@@ -1,8 +1,3 @@
-img{
-  width: 100%;
-  height: auto;
-}
-
 .galeria {
   display: flex;
   flex-wrap: nowrap;
@@ -21,8 +16,13 @@ img{
   background-color: aliceblue;
   color: #d9d9d9;
   scroll-snap-align: center;
+  object-fit: contain;
 }
 
+/* .item_galeria figure{
+  max-width: 100%;
+  height: auto;
+} */
 
 
 @media screen and (min-width:800px) {
