--- a/src/css1.css
+++ b/src/css1.css
@@ -1,10 +1,10 @@
 img { 
-  object-fit: cover;
+  object-fit: contain;
 } 
 
 .galeria {
-  display: flexbox;
-  flex-wrap: nowrap;
+  display: flex;
+  flex-wrap: wrap;
   margin: 0;
   padding: 0;
   background-color: #f0f0f0;
