cambios imagen para pantallas peque;as

--- a/src/css1.css
+++ b/src/css1.css
@@ -1,5 +1,8 @@
 img { 
   object-fit: contain;
+  width: 100%;
+  max-width: 100%;
+  height: auto;
 } 
 
 .galeria {
@@ -11,6 +14,9 @@ img {
   scroll-snap-type: x mandatory;
   scroll-behavior: smooth;
   overflow-x: scroll;
+  width: 100%;
+  max-width: 100%;
+  height: auto;
 }
 
 .item_galeria {
@@ -20,6 +26,9 @@ img {
   background-color: aliceblue;
   color: #d9d9d9;
   scroll-snap-align: center;
+  width: 100%;
+  max-width: 100%;
+  height: auto;
 }
 
 /* .item_galeria figure{
