--- a/src/css1.css
+++ b/src/css1.css
@@ -18,15 +18,15 @@ img {
 }
 
 .item_galeria {
-  padding: .1rem;
+  padding: 0;
   font-size: 1.2rem;
   text-align: center;
   background-color: aliceblue;
   color: #d9d9d9;
   scroll-snap-align: center;
-  width: 100%;
-  max-width: 100%;
-  height: auto;
+  height: 100%;
+  max-height: 100%;
+  width: auto;
 }
 
 /* .item_galeria figure{
