--- a/src/css1.css
+++ b/src/css1.css
@@ -1,7 +1,9 @@
+*{
+  box-sizing: border-box;
+}
 img { 
   object-fit: contain;
   width: 100%;
-  max-width: 100%;
   height: auto;
 } 
 
@@ -24,9 +26,9 @@ img {
   background-color: aliceblue;
   color: #d9d9d9;
   scroll-snap-align: center;
-  height: 100%;
-  max-height: 100%;
-  width: auto;
+  width: 100%;
+  height: auto;
+  box-shadow: inset;
 }
 
 /* .item_galeria figure{
